@@ -5,6 +5,7 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.List;
 import java.util.Properties;
 
 import org.apache.commons.lang3.StringUtils;
@@ -14,7 +15,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
 
+import ch.ralscha.extdirectspring.annotation.ExtDirectMethod;
+import ch.ralscha.extdirectspring.annotation.ExtDirectMethodType;
+import ch.ralscha.extdirectspring.bean.ExtDirectStoreReadRequest;
+import ch.ralscha.extdirectspring.filter.StringFilter;
 import ch.rasc.musicsearch.model.Info;
+import ch.rasc.musicsearch.model.Song;
+
+import com.google.common.collect.Lists;
 
 @Service
 public class SearchService {
@@ -24,6 +32,7 @@ public class SearchService {
 	@Autowired
 	private Environment environement;
 
+	@ExtDirectMethod
 	public Info getInfo() {
 
 		Info info = new Info();
@@ -39,10 +48,10 @@ public class SearchService {
 			String noOfSongsString = (String) properties.get("noOfSongs");
 
 			if (StringUtils.isNotBlank(totalDurationString)) {
-				info.setTotalDuration(new Integer(totalDurationString));
+				info.setTotalDuration(Integer.valueOf(totalDurationString));
 			}
 			if (StringUtils.isNotBlank(noOfSongsString)) {
-				info.setNoOfSongs(new Integer(noOfSongsString));
+				info.setNoOfSongs(Integer.valueOf(noOfSongsString));
 			}
 
 		} catch (FileNotFoundException e) {
@@ -54,67 +63,80 @@ public class SearchService {
 		return info;
 	}
 
-	// public List<Songs> search(String queryString) throws
-	// CorruptIndexException, IOException {
-	//
-	// logger.info("SEARCH FOR: " + queryString);
-	//
-	// List<Songs> resultList = new ArrayList<Songs>();
-	// Searcher searcher = new IndexSearcher(indexDir);
-	// try {
-	// String[] fields = { "title", "author", "album", "date", "fileName",
-	// "directory" };
-	// MultiFieldQueryParser parser = new MultiFieldQueryParser(fields, new
-	// StandardAnalyzer());
-	//
-	// parser.setDefaultOperator(QueryParser.AND_OPERATOR);
-	// parser.setAllowLeadingWildcard(true);
-	//
-	// Query query;
-	// try {
-	// query = parser.parse(queryString);
-	// } catch (ParseException e) {
-	// query = parser.parse(QueryParser.escape(queryString));
-	// }
-	//
-	// Hits hits = searcher.search(query);
-	// logger.info("FOUND:      " + hits.length());
-	//
-	// for (int i = 0; i < hits.length(); i++) {
-	// Songs song = new Songs();
-	// song.setFileName(hits.doc(i).get("fileName"));
-	//
-	// File dir = new File(hits.doc(i).get("directory"));
-	// File f = new File(dir, song.getFileName());
-	// song.setDirectory(f.getPath());
-	//
-	// song.setArtist(hits.doc(i).get("author"));
-	// song.setYear(hits.doc(i).get("date"));
-	// song.setAlbum(hits.doc(i).get("album"));
-	// song.setTitle(hits.doc(i).get("title"));
-	//
-	// if (StringUtils.isBlank(song.getArtist()) &&
-	// StringUtils.isBlank(song.getAlbum())
-	// && StringUtils.isBlank(song.getTitle())) {
-	// song.setTitle(song.getFileName());
-	// }
-	//
-	// String durationString = hits.doc(i).get("duration");
-	// if (StringUtils.isNotBlank(durationString)) {
-	// song.setDuration(new Integer(durationString));
-	// } else {
-	// song.setDuration(null);
-	// }
-	//
-	// resultList.add(song);
-	// }
-	// } finally {
-	// if (searcher != null) {
-	// searcher.close();
-	// }
-	// }
-	//
-	// return resultList;
-	//
-	// }
+	@ExtDirectMethod(value=ExtDirectMethodType.STORE_READ)
+	public List<Song> search(ExtDirectStoreReadRequest storeRequest) {
+		
+		String filterValue = null;
+		if (!storeRequest.getFilters().isEmpty()) {
+			StringFilter filter = (StringFilter) storeRequest.getFilters().iterator().next();
+			filterValue = filter.getValue();
+		}
+		
+		logger.info("SEARCH FOR: " + filterValue);
+
+		List<Song> resultList = Lists.newArrayList();
+		Song s = new Song();
+		s.setAlbum("album");
+		s.setArtist("artist");
+		s.setDirectory("dir");
+		s.setFileName("file");
+		s.setDurationInSeconds(100);
+		s.setTitle("title");
+		s.setYear("year");
+		resultList.add(s);
+		
+//		Searcher searcher = new IndexSearcher(indexDir);
+//		try {
+//			String[] fields = { "title", "author", "album", "date", "fileName", "directory" };
+//			MultiFieldQueryParser parser = new MultiFieldQueryParser(fields, new StandardAnalyzer());
+//
+//			parser.setDefaultOperator(QueryParser.AND_OPERATOR);
+//			parser.setAllowLeadingWildcard(true);
+//
+//			Query query;
+//			try {
+//				query = parser.parse(queryString);
+//			} catch (ParseException e) {
+//				query = parser.parse(QueryParser.escape(queryString));
+//			}
+//
+//			Hits hits = searcher.search(query);
+//			logger.info("FOUND:      " + hits.length());
+//
+//			for (int i = 0; i < hits.length(); i++) {
+//				Songs song = new Songs();
+//				song.setFileName(hits.doc(i).get("fileName"));
+//
+//				File dir = new File(hits.doc(i).get("directory"));
+//				File f = new File(dir, song.getFileName());
+//				song.setDirectory(f.getPath());
+//
+//				song.setArtist(hits.doc(i).get("author"));
+//				song.setYear(hits.doc(i).get("date"));
+//				song.setAlbum(hits.doc(i).get("album"));
+//				song.setTitle(hits.doc(i).get("title"));
+//
+//				if (StringUtils.isBlank(song.getArtist()) && StringUtils.isBlank(song.getAlbum())
+//						&& StringUtils.isBlank(song.getTitle())) {
+//					song.setTitle(song.getFileName());
+//				}
+//
+//				String durationString = hits.doc(i).get("duration");
+//				if (StringUtils.isNotBlank(durationString)) {
+//					song.setDuration(new Integer(durationString));
+//				} else {
+//					song.setDuration(null);
+//				}
+//
+//				resultList.add(song);
+//			}
+//		} finally {
+//			if (searcher != null) {
+//				searcher.close();
+//			}
+//		}
+
+		return resultList;
+
+	}
 }
